@@ -225,11 +225,6 @@ class Page(plugin.Plugin):
                 self.preseed(question, 'false')
             return True
 
-        # We cannot currently import from partitions that are scheduled for
-        # deletion, so we filter them out of the list.
-        if question == 'migration-assistant/partitions':
-            self.filter_parts()
-
         elif question == 'ubiquity/run-ma-again':
             self.db.set('ubiquity/run-ma-again', 'false')
             self.set_choices()
@@ -285,33 +280,6 @@ class Page(plugin.Plugin):
             self.preseed(question, ', '.join(users[p]))
 
         return plugin.Plugin.ok_handler(self)
-
-    def filter_parts(self):
-        question = 'migration-assistant/partitions'
-        from ubiquity.parted_server import PartedServer
-        with misc.raised_privileges():
-            parted = PartedServer()
-
-            parts = []
-            for disk in parted.disks():
-                parted.select_disk(disk)
-                for partition in parted.partitions():
-                    # We check to see if the partition is scheduled to be
-                    # formatted and if not add it to the list of post-commit
-                    # available partitions.
-                    filename = '/var/lib/partman/devices/%s/%s/format' % \
-                        (disk, partition[1])
-                    if os.path.exists(filename):
-                        syslog.syslog('filtering out %s as it is to be formatted.' % partition[5])
-                    else:
-                        parts.append(partition[5])
-
-        ret = []
-        for choice in self.choices(question):
-            if choice[choice.rfind('(')+1:choice.rfind(')')] in parts:
-                ret.append(choice)
-
-        self.preseed(question, ", ".join(ret))
 
     def set_choices(self):
         tree = []
